added scripts for tasks catalog

--- a/cockpit/config/menu.yaml
+++ b/cockpit/config/menu.yaml
@@ -28,14 +28,14 @@ description: ''
         1:
             id: 'List Tasks'
             type: 'command'
-            exec-type: 'module'
-            exec: 'list_tasks'
+            exec-type: 'script'
+            exec: 'list_tasks.py'
             description: 'List registered tasks'
         2:
             id: 'Show Tasks'
             type: 'command'
-            exec-type: 'module'
-            exec: 'show_task'
+            exec-type: 'script'
+            exec: 'show_task.py'
             description: 'Show selected task information'
 
     2:
@@ -115,7 +115,7 @@ description: ''
             id: 'Show Jobs'
             type: 'command'
             exec-type: 'script'
-            exec: 'show_jobs.py'
+            exec: 'show_job.py'
             description: 'Show selected job information'
         3:
             id: 'Test Job'
@@ -126,7 +126,7 @@ description: ''
     2:
         id: 'Create New Job'
         type: 'menu'
-        description: 'add description here'
+        description: 'Create a new job from list of job types'
         1:
             id: 'Validate'
             type: 'command'
@@ -154,7 +154,7 @@ description: ''
     3:
         id: 'Edit Job'
         type: 'menu'
-        description: 'add description here'
+        description: 'Select a job and change its attributes'
         1:
             id: 'Name'
             type: 'command'
@@ -184,7 +184,7 @@ description: ''
         type: 'command'
         exec-type: ''
         exec: ''
-        description: 'add description here'
+        description: 'Delete a job if not associated with a task'
 3:
     id: 'Policies'
     type: 'menu'
