minor styling changes

--- a/cockpit/config/menu.yaml
+++ b/cockpit/config/menu.yaml
@@ -162,7 +162,7 @@ description: ''
             exec: ''
             description: 'add description here'
         2:
-            id: 'command'
+            id: 'Command'
             type: 'command'
             exec-type: ''
             exec: ''
@@ -206,7 +206,7 @@ description: ''
             exec: 'show_policy.py'
             description: 'Show selected job information'
     2:
-        id: 'Create new policy'
+        id: 'Create New Policy'
         type: 'command'
         exec-type: ''
         exec: ''
@@ -260,14 +260,14 @@ description: ''
         type: 'menu'
         description: 'add description here'
         1:
-            id: 'List last 15'
+            id: 'List Last 15'
             type: 'command'
             exec-type: ''
             exec: ''
 
             description: 'add description here'
         2:
-            id: 'Show executions'
+            id: 'Show Executions'
             type: 'command'
             exec-type: ''
             exec: ''
