--- a/cockpit/config/config.yaml
+++ b/cockpit/config/config.yaml
@@ -1,21 +1,32 @@
+#
+# minimal required params are:
+# - cockpit (db_home & db_name)
+# - variables (pivot & rest) for each environment.
+# the rest can be filled automatically by the main script
+#
 params:
   cockpit:
-    db_home: ''
-    db_name: ''
+    # where the sqlite database resides
+    db_home: 
+    # the name of the database file
+    db_name: 
   dr:
     endpoints:
-      pivot: ''
-      rest: ''
+      pivot: 
+      rest: 
+    # the os variables to access pivot & REST
     variables:
-      pivot: PIVOT_DR
-      rest: ENDPOINT_DR
+      pivot: 
+      rest: 
   prd:
     endpoints:
-      pivot: ''
+      pivot: 
       rest: ''
+    # the os variables to access pivot & REST
     variables:
-      pivot: PIVOT_PRD
-      rest: ENDPOINT_PRD
+      pivot: 
+      rest: 
+# add types of jobs here
 types:
   1: 'Validate'
   2: 'Deploy MS'
@@ -24,3 +35,4 @@ types:
   5: 'IIDR Job'
   6: 'Adabas Consumer Job'
   7: 'MSSQL Job'
+  
