Fixed object mgmt code : - Removed gs.username, gs.password from the service param. - On register type if type already exist in space it should indicate it and not act as it was successfully registered - On service creation please use 3 manager for locators not only 1. - Fixed list option

--- a/objectManagement/src/main/resources/application.properties
+++ b/objectManagement/src/main/resources/application.properties
@@ -12,6 +12,10 @@ lookup.locator=localhost:4174
 gs.username=
 gs.password=
 
+safe.appid=
+safe.safeid=
+safe.objectid=
+
 odsx.profile=
 ddl.properties.file.path=
 space.name=
