changed names of jobs

--- a/cockpit/config/menu.yaml
+++ b/cockpit/config/menu.yaml
@@ -128,10 +128,10 @@ description: ''
         type: 'menu'
         description: 'Create a new job from list of job types'
         1:
-            id: 'Validate'
+            id: 'Entries Counter'
             type: 'command'
             exec-type: 'script'
-            exec: 'create_validation_job.py'
+            exec: 'create_counter_job.py'
             description: 'Get entries count for a specific object type'
         2:
             id: 'Start Feeder'
@@ -140,7 +140,7 @@ description: ''
             exec: ''
             description: 'add description here'
         3:
-            id: 'Pause Feeder'
+            id: 'Stop Feeder'
             type: 'command'
             exec-type: ''
             exec: ''
