updated new jobs scripts & descriptions

--- a/cockpit/config/menu.yaml
+++ b/cockpit/config/menu.yaml
@@ -100,7 +100,7 @@ description: ''
 2:
     id: 'Jobs'
     type: 'menu'
-    description: 'A job is the "atomic component" associated with a task'
+    description: 'A job is the most basic (atomic) component associated with a task'
     1: 
         id: 'Jobs Catalog'
         type: 'menu'
@@ -132,25 +132,25 @@ description: ''
             type: 'command'
             exec-type: 'script'
             exec: 'create_counter_job.py'
-            description: 'Get entries count for a specific object type'
+            description: 'Get entry count for an object in space'
         2:
             id: 'Start Feeder'
             type: 'command'
-            exec-type: ''
-            exec: ''
-            description: 'add description here'
+            exec-type: 'script'
+            exec: 'start_feeder.py'
+            description: 'Start a feeder'
         3:
             id: 'Stop Feeder'
             type: 'command'
-            exec-type: ''
-            exec: ''
-            description: 'add description here'
+            exec-type: 'script'
+            exec: 'stop_feeder.py'
+            description: 'Stop a feeder'
         4:
             id: 'Deploy Feeder'
             type: 'command'
-            exec-type: ''
-            exec: ''
-            description: 'add description here'
+            exec-type: 'script'
+            exec: 'deploy_feeder.py'
+            description: 'Deploy a feeder'
     3:
         id: 'Edit Job'
         type: 'menu'
