renamed feeder scripts

--- a/cockpit/config/menu.yaml
+++ b/cockpit/config/menu.yaml
@@ -137,19 +137,19 @@ description: ''
             id: 'Start Feeder'
             type: 'command'
             exec-type: 'script'
-            exec: 'start_feeder.py'
+            exec: 'feeder_start.py'
             description: 'Start a feeder'
         3:
             id: 'Stop Feeder'
             type: 'command'
             exec-type: 'script'
-            exec: 'stop_feeder.py'
+            exec: 'feeder_stop_.py'
             description: 'Stop a feeder'
         4:
             id: 'Deploy Feeder'
             type: 'command'
             exec-type: 'script'
-            exec: 'deploy_feeder.py'
+            exec: 'feeder_deploy.py'
             description: 'Deploy a feeder'
     3:
         id: 'Edit Job'
