--- a/customerPackager/manifest.yaml
+++ b/customerPackager/manifest.yaml
@@ -20,6 +20,9 @@ clients:
       - 'tools/apache'
       - 'tools/jdbc'
       - 'tools/kubernetes'
+      - 'lib/optional/spatial'
+      - 'lib/optional/full-text-search'
+      - 'lib/optional/rest'
   klarna:
     id: 4
     packages:
