minor syntax corrections

--- a/cockpit/config/menu.yaml
+++ b/cockpit/config/menu.yaml
@@ -149,7 +149,7 @@ description: ''
             id: 'Stop Feeder'
             type: 'command'
             exec-type: 'script'
-            exec: 'feeder_stop_.py'
+            exec: 'feeder_stop.py'
             description: 'Stop a feeder'
     3:
         id: 'Edit Job'
@@ -192,7 +192,7 @@ description: ''
     1: 
         id: 'Policies Catalog'
         type: 'menu'
-        description: 'The catalog of registered jobs'
+        description: 'The catalog of registered policies'
         1:
             id: 'List Policies'
             type: 'command'
@@ -210,7 +210,7 @@ description: ''
         type: 'command'
         exec-type: 'script'
         exec: 'create_new_policy.py'
-        description: 'Create a new policy for existing tasks'
+        description: 'Create a new policy manager or worker'
     3:
         id: 'Edit Policies'
         type: 'menu'
