moved tasks to index 2

--- a/cockpit/config/menu.yaml
+++ b/cockpit/config/menu.yaml
@@ -18,6 +18,96 @@ id: 'Main'
 type: 'menu'
 description: ''
 1:
+    id: 'Jobs'
+    type: 'menu'
+    description: 'A job is the basic (atomic) component associated with a task'
+    1: 
+        id: 'Jobs Catalog'
+        type: 'menu'
+        description: 'The catalog of registered jobs'
+        1:
+            id: 'List Jobs'
+            type: 'command'
+            exec-type: 'script'
+            exec: 'list_jobs.py'
+            description: 'List registered jobs'
+        2:
+            id: 'Show Jobs'
+            type: 'command'
+            exec-type: 'script'
+            exec: 'show_job.py'
+            description: 'Show selected job information'
+        3:
+            id: 'Test Job'
+            type: 'command'
+            exec-type: 'script'
+            exec: 'test_job.py'
+            description: 'Try/Test a selected job'
+    2:
+        id: 'Create New Job'
+        type: 'command'
+        exec-type: 'script'
+        exec: 'create_new_job.py'
+        description: 'Create a new job from list of job types'
+        1:
+            id: 'Entries Counter'
+            type: 'command'
+            exec-type: 'script'
+            exec: 'create_counter_job.py'
+            description: 'Get entry count for an object in space'
+        2:
+            id: 'Deploy Feeder'
+            type: 'command'
+            exec-type: 'script'
+            exec: 'feeder_deploy.py'
+            description: 'Deploy a feeder'
+        3:
+            id: 'Start Feeder'
+            type: 'command'
+            exec-type: 'script'
+            exec: 'feeder_start.py'
+            description: 'Start a feeder'
+        4:
+            id: 'Stop Feeder'
+            type: 'command'
+            exec-type: 'script'
+            exec: 'feeder_stop.py'
+            description: 'Stop a feeder'
+    3:
+        id: 'Edit Job'
+        type: 'menu'
+        description: 'Select a job and change its attributes'
+        1:
+            id: 'Name'
+            type: 'command'
+            exec-type: ''
+            exec: ''
+            description: 'add description here'
+        2:
+            id: 'Command'
+            type: 'command'
+            exec-type: ''
+            exec: ''
+            description: 'add description here'
+        3:
+            id: 'Destination'
+            type: 'command'
+            exec-type: ''
+            exec: ''
+            description: 'add description here'
+        4:
+            id: 'Metadata'
+            type: 'command'
+            exec-type: ''
+            exec: ''
+            description: 'add description here'
+    4:
+        id: 'Delete job'
+        type: 'command'
+        exec-type: ''
+        exec: ''
+        description: 'Delete a job if not associated with a task'
+2:
     id: 'Tasks'
     type: 'menu'
     description: 'Task is a collection of one or more jobs'
@@ -97,94 +187,6 @@ description: ''
         exec-type: ''
         exec: ''
         description: 'Delete/Deregister a task'
-2:
-    id: 'Jobs'
-    type: 'menu'
-    description: 'A job is the most basic (atomic) component associated with a task'
-    1: 
-        id: 'Jobs Catalog'
-        type: 'menu'
-        description: 'The catalog of registered jobs'
-        1:
-            id: 'List Jobs'
-            type: 'command'
-            exec-type: 'script'
-            exec: 'list_jobs.py'
-            description: 'List registered jobs'
-        2:
-            id: 'Show Jobs'
-            type: 'command'
-            exec-type: 'script'
-            exec: 'show_job.py'
-            description: 'Show selected job information'
-        3:
-            id: 'Test Job'
-            type: 'command'
-            exec-type: 'script'
-            exec: 'test_job.py'
-            description: 'Try/Test a selected job'
-    2:
-        id: 'Create New Job'
-        type: 'menu'
-        description: 'Create a new job from list of job types'
-        1:
-            id: 'Entries Counter'
-            type: 'command'
-            exec-type: 'script'
-            exec: 'create_counter_job.py'
-            description: 'Get entry count for an object in space'
-        2:
-            id: 'Deploy Feeder'
-            type: 'command'
-            exec-type: 'script'
-            exec: 'feeder_deploy.py'
-            description: 'Deploy a feeder'
-        3:
-            id: 'Start Feeder'
-            type: 'command'
-            exec-type: 'script'
-            exec: 'feeder_start.py'
-            description: 'Start a feeder'
-        4:
-            id: 'Stop Feeder'
-            type: 'command'
-            exec-type: 'script'
-            exec: 'feeder_stop.py'
-            description: 'Stop a feeder'
-    3:
-        id: 'Edit Job'
-        type: 'menu'
-        description: 'Select a job and change its attributes'
-        1:
-            id: 'Name'
-            type: 'command'
-            exec-type: ''
-            exec: ''
-            description: 'add description here'
-        2:
-            id: 'Command'
-            type: 'command'
-            exec-type: ''
-            exec: ''
-            description: 'add description here'
-        3:
-            id: 'Destination'
-            type: 'command'
-            exec-type: ''
-            exec: ''
-            description: 'add description here'
-        4:
-            id: 'Metadata'
-            type: 'command'
-            exec-type: ''
-            exec: ''
-            description: 'add description here'
-    4:
-        id: 'Delete job'
-        type: 'command'
-        exec-type: ''
-        exec: ''
-        description: 'Delete a job if not associated with a task'
 3:
     id: 'Policies'
     type: 'menu'
