--- a/objectManagement/pom.xml
+++ b/objectManagement/pom.xml
@@ -17,7 +17,7 @@
         <java.version>8</java.version>
         <gs.version.leumi>16.2.0-m18</gs.version.leumi>
         <gs.version.old>16.2.0-m4-sun-10</gs.version.old>
-        <gs.version>16.2.0-m26-thu-30</gs.version>
+        <gs.version>16.2.0-patch-L-1</gs.version>
     </properties>
     <repositories>
         <repository>
