Updated bi optional pu to check dirty file flag

--- a/Bi_Optional_pu/src/main/resources/gs-service-config.yaml
+++ b/Bi_Optional_pu/src/main/resources/gs-service-config.yaml
@@ -3,3 +3,4 @@ space:
   propertyFilePath: spaceproperty.properties
 tieredCriteriaConfig:
   filePath: TieredCriteria.tab
+  dirtyBitFile: TSDirtyBit
