--- a/check_manager_sync/check_manager_sync.conf
+++ b/check_manager_sync/check_manager_sync.conf
@@ -11,12 +11,8 @@ _CREDS=( user pass )
 _USER=${_CREDS[0]}
 _PASS=${_CREDS[1]}
 # Get managers and loadbalancer
-if [[ -z $_ODSGS ]] ; then
-  _ODSGS=$(runall -m -l | tail -1)
-  _ALL_ODS_MNG=( $(runall -m -l | grep -v ===) )
-else
-  _ALL_ODS_MNG=( $(curl -u ${_USER}:${_PASS} -sk "https://${_ODSGS}:8090/v2/info" |jq '.managers | .[]' | tr -d '"') )
-fi
+_ALL_ODS_MNG=( $(awk -F= '/^export GS_MANAGER_SERVERS/ {gsub(","," ") ; print $2}' /dbagiga/gigaspaces-smart-ods/bin/setenv-overrides.sh) )
+_ODSGS=""
 # Remove temp files before quitting
 trap graceful_shutdown SIGINT SIGQUIT SIGTERM
 graceful_shutdown() {
