Fixed - iterating over each type based on criteria tab file - building jar issue with java 11 - logging proper error

--- a/TierDirectCall/src/main/resources/application.properties
+++ b/TierDirectCall/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=tierdirectcall-update-cache-policy
 server.port=7002
 log.location=${HOME}
-logging.file.name=${log.location}/object-management.log
+logging.file.name=${log.location}/tierDirectApp.log
 space.name=
 tier.criteria.file=
 xap.workLocation=
