--- a/TierDirectCall/pom.xml
+++ b/TierDirectCall/pom.xml
@@ -64,6 +64,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>tierdirectcall</finalName>
 	</build>
 
 </project>
