Revert "Done LEUMI-483"
This reverts commit c7982cd20bc2c78c9aa8e89d2556ce61027d45b7.

--- a/tiered_storage_jar/src/main/resources/gs-service-config.yaml
+++ b/tiered_storage_jar/src/main/resources/gs-service-config.yaml
@@ -1,3 +1,6 @@
 space:
   name: space
   propertyFilePath: spaceproperty.properties
+tieredCriteriaConfig:
+  filePath: TieredCriteria.tab
+  dirtyBitFile: TSDirtyBit
