--- a/data-validator/data-validator-server/pom.xml
+++ b/data-validator/data-validator-server/pom.xml
@@ -73,7 +73,7 @@
         <dependency>
             <groupId>com.ibm.db2.jcc</groupId>
                 <artifactId>db2jcc4</artifactId>
-                <version>4.19.80</version>
+                <version>4.26.14</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/sqljdbc4 -->
         <!--<dependency>
@@ -106,6 +106,11 @@
 			<artifactId>sqlite-dialect</artifactId>
 			<version>1.0</version>
 		</dependency>
+        <dependency>
+            <groupId>org.influxdb</groupId>
+            <artifactId>influxdb-java</artifactId>
+            <version>2.8</version>
+        </dependency>
 
     </dependencies>
 
