--- a/data-validator/data-validator-server/src/main/resources/application.properties
+++ b/data-validator/data-validator-server/src/main/resources/application.properties
@@ -4,3 +4,6 @@ pathToDataBase=/home/gsods/datavalidator.db
 #logging.file.name=datavalidator.log
 #pathToDataBase=datavalidator.db
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+influxDBUrl=http://127.0.0.1:8086
+influxDBUsername=admin
+influxDBPassword=admin
