--- a/data-validator/data-validator-server/src/main/resources/application.properties
+++ b/data-validator/data-validator-server/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 influxDBUrl=http://127.0.0.1:8086
 influxDBUsername=admin
 influxDBPassword=admin
+influxDBName=mydb
+envName=dev
