deleted placeholders in Utilities + minor syntax

--- a/Recovery Assistant/config/menu.yaml
+++ b/Recovery Assistant/config/menu.yaml
@@ -16,39 +16,39 @@ description: ''
     1:
         id: 'Flush'
         type: 'exec'
-        target: 'flush.py'
+        target: ''
         description: 'short description here...'
     2:
         id: 'Scheduled Task'
         type: 'exec'
-        target: 'scheduled_task.py'
+        target: ''
         description: 'short description here...'
 2:
     id: 'Recovery'
     type: 'menu'
     description: 'short description here...'
     1:
-        id: '(Step 1) Copy Redo Log Files '
+        id: 'Step #1 - Copy Redo Log Files '
         type: 'exec'
         target: ''
         description: 'short description here...'
     2:
-        id: '(Step 2) Run Deserialized Script '
+        id: 'Step #2 - Run Deserialized Script '
         type: 'exec'
         target: ''
         description: 'short description here...'
     3:
-        id: '(Step 3) Copy Deserialized Files '
+        id: 'Step #3 - Copy Deserialized Files '
         type: 'exec'
         target: ''
         description: 'short description here...'
     4:
-        id: '(Step 4) Check Target Space '
+        id: 'Step #4 - Check Target Space '
         type: 'exec'
         target: ''
         description: 'short description here...'
     5:
-        id: '(Step 5) Run Replay Script '
+        id: 'Step #5 - Run Replay Script '
         type: 'exec'
         target: ''
         description: 'short description here...'
