integrated scripts into menu

--- a/Recovery Assistant/config/menu.yaml
+++ b/Recovery Assistant/config/menu.yaml
@@ -16,8 +16,8 @@ description: ''
     1:
         id: 'Flush'
         type: 'exec'
-        target: ''
-        description: 'short description here...'
+        target: 'flushScript.bat'
+        description: 'Flush redolog to disk after having typical flow'
     2:
         id: 'Scheduled Task'
         type: 'exec'
@@ -26,22 +26,22 @@ description: ''
 2:
     id: 'Recovery'
     type: 'menu'
-    description: 'short description here...'
+    description: 'Steps to recover from failures'
     1:
         id: 'Step #1 - Copy Redo Log Files '
         type: 'exec'
-        target: ''
-        description: 'short description here...'
+        target: 'copyRedoLogScriptMultipleHost.bat'
+        description: 'Copy redolog files to backup folder, once cluster is down'
     2:
         id: 'Step #2 - Run Deserialized Script '
         type: 'exec'
-        target: ''
-        description: 'short description here...'
+        target: 'deserializeMultipleHost.bat'
+        description: 'Deserilze primaries redologs'
     3:
         id: 'Step #3 - Copy Deserialized Files '
         type: 'exec'
-        target: ''
-        description: 'short description here...'
+        target: 'collectAllDeserializeFilesToPivot.bat'
+        description: 'Gather all deserialized redolog files to one target'
     4:
         id: 'Step #4 - Check Target Space '
         type: 'exec'
@@ -50,6 +50,6 @@ description: ''
     5:
         id: 'Step #5 - Run Replay Script '
         type: 'exec'
-        target: ''
-        description: 'short description here...'
+        target: 'spaceReplay.bat'
+        description: 'Run replay script that go over all deserialized redologs and apply them to the new space'
 ...
