minor syntax changes

--- a/Recovery Assistant/config/menu.yaml
+++ b/Recovery Assistant/config/menu.yaml
@@ -12,7 +12,7 @@ description: ''
 1:
     id: 'Utilities'
     type: 'menu'
-    description: 'short description here...'
+    description: 'add description here...'
     1:
         id: 'Flush'
         type: 'exec'
@@ -22,7 +22,7 @@ description: ''
         id: 'Scheduled Task'
         type: 'exec'
         target: ''
-        description: 'short description here...'
+        description: 'add description here...'
 2:
     id: 'Recovery'
     type: 'menu'
@@ -46,10 +46,10 @@ description: ''
         id: 'Step #4 - Check Target Space '
         type: 'exec'
         target: ''
-        description: 'short description here...'
+        description: 'add description here...'
     5:
         id: 'Step #5 - Run Replay Script '
         type: 'exec'
         target: 'spaceReplay.bat'
-        description: 'Run replay script that go over all deserialized redologs and apply them to the new space'
+        description: 'Go over all deserialized redologs and apply them to the new space'
 ...
