--- a/Recovery Assistant/config/menu.yaml
+++ b/Recovery Assistant/config/menu.yaml
@@ -8,48 +8,30 @@
 
 id: 'Main'
 type: 'menu'
-description: ''
+description: 'Follow these steps to recover from failures'
 1:
-    id: 'Utilities'
-    type: 'menu'
-    description: 'add description here...'
-    1:
-        id: 'Flush'
-        type: 'exec'
-        target: 'flushScript.py'
-        description: 'Flush redolog to disk after having typical flow'
-    2:
-        id: 'Scheduled Task'
-        type: 'exec'
-        target: 'scheduleTask.py'
-        description: 'create a scheduled redolog flush task'
+    id: 'Step #1 - Copy Redo Log Files '
+    type: 'exec'
+    target: 'copyRedoLogScriptMultipleHost.py'
+    description: 'Copy redolog files to backup folder, once cluster is down'
 2:
-    id: 'Recovery'
-    type: 'menu'
-    description: 'Steps to recover from failures'
-    1:
-        id: 'Step #1 - Copy Redo Log Files '
-        type: 'exec'
-        target: 'copyRedoLogScriptMultipleHost.py'
-        description: 'Copy redolog files to backup folder, once cluster is down'
-    2:
-        id: 'Step #2 - Run Deserialized Script '
-        type: 'exec'
-        target: 'deserializeMultipleHost.py'
-        description: 'Deserilze primaries redologs'
-    3:
-        id: 'Step #3 - Copy Deserialized Files '
-        type: 'exec'
-        target: 'collectAllDeserializeFilesToPivot.py'
-        description: 'Gather all deserialized redolog files to one target'
-    4:
-        id: 'Step #4 - Check Target Space '
-        type: 'exec'
-        target: 'checkTargetSpace.py'
-        description: 'add description here...'
-    5:
-        id: 'Step #5 - Run Replay Script '
-        type: 'exec'
-        target: 'spaceReplay.py'
-        description: 'Go over all deserialized redologs and apply them to the new space'
+    id: 'Step #2 - Run Deserialized Script '
+    type: 'exec'
+    target: 'deserializeMultipleHost.py'
+    description: 'Deserilze primaries redologs'
+3:
+    id: 'Step #3 - Copy Deserialized Files '
+    type: 'exec'
+    target: 'collectAllDeserializeFilesToPivot.py'
+    description: 'Gather all deserialized redolog files to one target'
+4:
+    id: 'Step #4 - Check Target Space '
+    type: 'exec'
+    target: 'checkTargetSpace.py'
+    description: 'add description here...'
+5:
+    id: 'Step #5 - Run Replay Script '
+    type: 'exec'
+    target: 'spaceReplay.py'
+    description: 'Go over all deserialized redologs and apply them to the new space'
 ...
