updated version 2.6.5 with included commons

--- a/runall/runall.conf
+++ b/runall/runall.conf
@@ -33,6 +33,9 @@ _p_ENV_NAME=Pivot server(s)
 _p_SERVER_LIST=
 _p_SERVICES=R:22:SSH L:8086:INFLUXDB_HTTP L:3000:GRAFANA-SERVER L:9992:KAPACITOR
 
+# Cockpit Server
+_cp_ENV_NAME=Cockpit Server
+
 # All NorthBound servers
 _n_ENV_NAME=All NorthBound servers
 _A_ENV_NAME=All servers
