--- a/data-validator/data-validator-server/pom.xml
+++ b/data-validator/data-validator-server/pom.xml
@@ -111,7 +111,11 @@
             <artifactId>influxdb-java</artifactId>
             <version>2.8</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>23.2.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
