added telegraf check on pivot for freshness

--- a/runall/runall.conf
+++ b/runall/runall.conf
@@ -24,7 +24,7 @@ _nm_SERVICES=R:0:PING R:22:SSH
 
 # Pivot server
 _p_ENV_NAME=Pivot server(s)
-_p_SERVICES=R:22:SSH L:8086:INFLUXDB_HTTP L:3000:GRAFANA-SERVER L:9992:KAPACITOR
+_p_SERVICES=R:22:SSH L:8086:INFLUXDB_HTTP L:3000:GRAFANA-SERVER L:9992:KAPACITOR L:telegraf:TELEGRAF
 
 # Cockpit Server
 _cp_ENV_NAME=Cockpit Server
