--- a/DI_CDC/automation/di-iidr-watchdog/di_watchdog_rest.conf
+++ b/DI_CDC/automation/di-iidr-watchdog/di_watchdog_rest.conf
@@ -1,15 +1,20 @@
 # Hosts
-iidrHost="iidr1"
-diHost="di1"
-kafkaHosts="di1 di2 di3"
+iidrHost="gsprod-iidr1.tau.ac.il"
+iidrOracleAgentHost="gsprod-dbagent.tau.ac.il"
+diHost="gsprod-di1.tau.ac.il"
+kafkaHosts="gsprod-di1.tau.ac.il gsprod-di2.tau.ac.il gsprod-di3.tau.ac.il"
 
 # Systemd services
 diServices="di-flink-jobmanager.service di-flink-taskmanager.service di-manager.service di-mdm.service"
 iidrServices="iidr_as_inst.service iidr_kafka_inst.service di-subscription-manager-iidr.service"
+iidrOracleAgentService="iidr_oracle_inst.service"
 kafkaServices="odsxzookeeper.service odsxkafka.service"
 
 # DI Rest test URI
 diMdmRest=$diHost:6081
 diManagerRest=$diHost:6080
 diSubManagerRest=$iidrHost:6082
+diFlinkRest=$diHost:8081
 
+# log file retention (in days)
+logRetention=7
