--- a/data-validator/data-validator-agent/src/main/resources/application.properties
+++ b/data-validator/data-validator-agent/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.port=3223
 logging.file.name=/home/gsods/datavalidator.log
 pathToDataBase=/home/gsods/datavalidator.db
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+logging.level.com.gigaspaces.datavalidator=INFO
